fixed elsint issues

--- a/internals/generators/page/index.tsx.hbs
+++ b/internals/generators/page/index.tsx.hbs
@@ -5,9 +5,7 @@
 */
 import React from 'react';
 
-interface Props {}
-
-export function {{ properCase componentName }}(props: Props) {
+export const {{ properCase componentName }}: React.FC = () => {
   return (
   <div>
     Page from {{ properCase componentName }}
